<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.MovieActivity">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Cadastrar Filme"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <EditText
        android:id="@+id/studioEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/studio"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEt" />

    <EditText
        android:id="@+id/yearEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toStartOf="@id/durationEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studioEt" />

    <EditText
        android:id="@+id/durationEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/duration"
        android:inputType="number"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/yearEt"
        app:layout_constraintTop_toBottomOf="@+id/studioEt" />

    <EditText
        android:id="@+id/gradeEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/grade"
        android:inputType="numberDecimal"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toStartOf="@id/watchedCb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/durationEt" />

    <CheckBox
        android:id="@+id/watchedCb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/watched"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gradeEt"
        app:layout_constraintTop_toBottomOf="@+id/durationEt"
        />

    <EditText
        android:id="@+id/genreEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Vai ser modificado"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradeEt" />

    <Button
        android:id="@+id/cancelBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cancel"
        android:fontFamily="sans-serif-condensed"
        android:backgroundTint="@color/cancel"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toStartOf="@id/saveBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreEt" />

    <Button
        android:id="@+id/saveBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/confirm"
        android:fontFamily="sans-serif-condensed"
        android:backgroundTint="@color/confirm"
        app:layout_constraintStart_toEndOf="@id/cancelBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreEt" />

</androidx.constraintlayout.widget.ConstraintLayout>